--- a/src/EducaOnline.Aluno.Application/EducaOnline.Aluno.Application.csproj
+++ b/src/EducaOnline.Aluno.Application/EducaOnline.Aluno.Application.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AutoMapper\" />
-    <Folder Include="ViewModels\" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
