--- a/src/EducaOnline.Financeiro.Domain/EducaOnline.Financeiro.Domain.csproj
+++ b/src/EducaOnline.Financeiro.Domain/EducaOnline.Financeiro.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EducaOnline.Core\EducaOnline.Core.csproj" />
+  </ItemGroup>
+
 </Project>
