acoes contexto conteudo

--- a/src/EducaOnline.Aluno.Application/EducaOnline.Aluno.Application.csproj
+++ b/src/EducaOnline.Aluno.Application/EducaOnline.Aluno.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\EducaOnline.Aluno.Domain\EducaOnline.Aluno.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
