--- a/src/EducaOnline.Financeiro.Application/EducaOnline.Financeiro.Application.csproj
+++ b/src/EducaOnline.Financeiro.Application/EducaOnline.Financeiro.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EducaOnline.Core\EducaOnline.Core.csproj" />
+    <ProjectReference Include="..\EducaOnline.Financeiro.Data\EducaOnline.Financeiro.Data.csproj" />
+  </ItemGroup>
+
 </Project>
